scripts/nullaway/annotator/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8.txt
../annotator/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/util/Reflector.java:286: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return null;
      ^
    (see http://t.uber.com/nullaway )
../annotator/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeObject.java:389: error: [NullAway] dereferenced expression list is @Nullable
    if (list.isEmptyList()) {
            ^
    (see http://t.uber.com/nullaway )
../annotator/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeObject.java:524: error: [NullAway] assigning @Nullable expression to @NonNull field
    obj.mData = null;
              ^
    (see http://t.uber.com/nullaway )
../annotator/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeReader.java:352: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return null;
      ^
    (see http://t.uber.com/nullaway )
4 errors
